[package]
name = "llvm"
version = "0.1.0"
edition = "2021"

[dependencies]
inkwell = { version = "0.5", features = ["llvm18-0"] }
clap = { version = "4.5", features = ["derive"] }
color-eyre = "0.6"
parser = { path = "../parser", default-features = false, features = ["optimize_add_to"] }

[features]
dynamic-linking = ["inkwell/llvm18-0-prefer-dynamic"]
